# mojo-regex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  OPTIMIZATION_OPPORTUNITIES.md  README.md  SIMD_IMPROVEMENTS_SUMMARY.md  pixi.toml  simple_bench.mojo  test_classification.mojo  test_complex_pattern.mojo  test_complex_pattern.py  test_hex_matcher.mojo  test_hex_matcher_standalone.mojo  test_integration.mojo  test_pattern_classification.mojo  test_phase2_improvements.mojo  test_range_matcher.mojo  test_register_passable.mojo  test_simd_optimization.mojo  test_strategy_analyzer.mojo
benchmarks/: BENCHMARKING_GUIDE.md  ENGINE_REPORTING.md  README.md  SIMD_BENCHMARKS.md  bench_compile_time_specialization.mojo  bench_engine.mojo  bench_engine.py  bench_literal_optimization.mojo  bench_python_re.py  compare_benchmarks.py  parse_mojo_output.py  profile_nanpa.mojo  run_comparison.sh  run_comparison_with.sh  run_comparison_with_main.sh  run_comparison_with_python.sh  run_comparison_with_rust.sh  simd_focused_benchmark.mojo  simd_focused_benchmark.py  visualize_results.py
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: bench_engine.rs  lib.rs
docs/: changelog.md  nanpa-perf-analysis.md  optimization-opportunities-v2.md  optimization-opportunities.md  performance-tips.md  pikevm-proposal.md
playground/: bench_char_classes.mojo  bench_phone_pattern.mojo  bench_phone_pattern_before.mojo  debug_engine_usage.mojo  debug_phone_classification.mojo  engine_summary.mojo  measure_baseline.mojo  reproduce_regex_cache_issue.mojo  test_comparison_scripts.mojo  (+8 more)
(+81 files in other folders)
