[package]
name = "mojo-regex-rust-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "mojo_regex_rust_bench"
path = "src/lib.rs"

[[bin]]
name = "bench_engine"
path = "src/bench_engine.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

# Note: RUSTFLAGS="--C target-cpu=native" should be set as environment variable for maximum SIMD performance
